--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -23,9 +23,8 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-      - run: cd tests
       - run: npm install
-      - run: ./node_modules/.bin/mocha *.js
+      - run: npx mocha tests/*.js
        
       - uses: actions/upload-artifact@v4
         if: always()
