--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+      -run: cd tests
       - run: npm install
       - run: npx mocha tests/*.js
        
