edit run_tests.yml 3s

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -2,12 +2,11 @@ name: Run tests
 
 on:
   workflow_dispatch:
-  pull_request:
-  
+
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     container:
       image: node:20
@@ -19,14 +18,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      - run: cd tests
+
+      - uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: 120
+          install-dependencies: true
+
+      # Start local server if needed
+      - run: |
+          python3 -m http.server 8000 &
+          sleep 10
+          curl http://localhost:8000 || echo "Server did not start"
+        if: always()
+
+      # Install dependencies
       - run: npm install
+
+      # Run tests
       - run: npx mocha tests/*.js
-       
+
+      # Upload screenshots if tests fail
       - uses: actions/upload-artifact@v4
         if: always()
         with:
