--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,33 +1,73 @@
 name: Run tests
 
+ 
+
 on:
+
   workflow_dispatch:
+
   
+
 jobs:
+
   test:
+
     name: Test
-    runs-on: ubuntu-latest
+
+    runs-on: ubuntu-22.04
+
+ 
 
     container:
+
       image: node:20
 
-    services:
-      selenium:
-        image: selenium/standalone-chrome
-        options: --shm-size=2gb
+ 
 
     steps:
+
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
+
         with:
+
           node-version: '20'
-          cache: 'npm'
-      - run: cd tests
-      - run: npm install
-      - run: ./node_modules/.bin/mocha tests/*.js
-       
-      - uses: actions/upload-artifact@v4
-        if: always()
+
+      - uses: browser-actions/setup-chrome@v1
+
         with:
+
+          chrome-version: 120
+
+          install-dependencies: true
+
+      - run: |
+
+            cd src
+
+            python3 -m http.server 8000 &
+
+            sleep 10 &&
+
+            curl http://localhost:8000
+
+            cd ..
+
+            cd tests
+
+            npm install
+
+            ./node_modules/.bin/mocha *.js
+
+       
+
+      - uses: actions/upload-artifact@v4
+
+        if: always()
+
+        with:
+
           name: screenshots
+
           path: screenshots/
