--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,73 +1,42 @@
 name: Run tests
 
- 
-
 on:
-
   workflow_dispatch:
-
   
-
 jobs:
-
   test:
-
     name: Test
-
-    runs-on: ubuntu-22.04
-
- 
+    runs-on: ubuntu-latest
 
     container:
-
       image: node:20
 
- 
+    services:
+      selenium:
+        image: selenium/standalone-chrome
+        options: --shm-size=2gb
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-
           node-version: '20'
+          cache: 'npm'
 
-      - uses: browser-actions/setup-chrome@v1
+      - name: Install dependencies
+        run: npm install
 
-        with:
+      - name: Run tests
+        env:
+          SELENIUM_REMOTE_URL: http://selenium:4444/wd/hub
+        run: npx mocha tests/*.js
 
-          chrome-version: 120
-
-          install-dependencies: true
-
-      - run: |
-
-            cd src
-
-            python3 -m http.server 8000 &
-
-            sleep 10 &&
-
-            curl http://localhost:8000
-
-            cd ..
-
-            cd tests
-
-            npm install
-
-            ./node_modules/.bin/mocha *.js
-
-       
-
-      - uses: actions/upload-artifact@v4
-
+      - name: Upload screenshots (if any)
+        uses: actions/upload-artifact@v4
         if: always()
-
         with:
-
           name: screenshots
-
           path: screenshots/
