--- a/.github/workflows/run_tests2.yml
+++ b/.github/workflows/run_tests2.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build with Maven
       run: |
           cd backend-calculator
-           mvn spring-boot:run & 
+            ./mvnw clean spring-boot:run & 
            echo "waiting 5 seconds for the server to start"
            sleep 5 
            attempt_counter=0
