--- a/.github/workflows/run_tests2.yml
+++ b/.github/workflows/run_tests2.yml
@@ -33,4 +33,4 @@ jobs:
            echo "sever ready for testing"
            npm install -g newman
            newman -v
-           newman run src/test/java/com/example/integration/calculator.postman_collection.json
+           newman run src/Tests backend.postman_collection.json
