--- a/.github/workflows/run_tests2.yml
+++ b/.github/workflows/run_tests2.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '17'
         distribution: 'temurin'
         cache: maven
     - name: Set up node 20 
@@ -27,7 +27,7 @@ jobs:
     - name: Build with Maven
       run: |
           cd backend-calculator
-            ./mvnw clean spring-boot:run & 
+            mvn spring-boot:run & 
            echo "waiting 5 seconds for the server to start"
            sleep 10
            echo "sever ready for testing"
