--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,7 +1,5 @@
 name: Run tests
 
- 
-
 on:
   workflow_dispatch:
   pull_request:
@@ -12,27 +10,38 @@ jobs:
     runs-on: ubuntu-22.04
     container:
       image: node:20
+
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+
       - uses: browser-actions/setup-chrome@v1
         with:
           chrome-version: 120
           install-dependencies: true
 
-      - run: |
-            cd src
-            python3 -m http.server 8000 &
-            sleep 20 &&
-            curl http://localhost:8000
-            cd ..
-            npm install
-            cd tests
-            npm install
-            ../node_modules/.bin/mocha *.js
-       
+      - name: Wait for Backend to Start
+        run: |
+          echo "Waiting for backend to be available..."
+          timeout 60s bash -c '
+          while ! curl -s http://localhost:8080/api/calculator/add?a=1&b=2; do
+            echo "Waiting for backend..."
+            sleep 5
+          done
+          '
+          echo "Backend is up!"
+
+      - name: Install and Run Frontend Tests
+        run: |
+          cd frontend
+          npm install
+          cd tests
+          npm install
+          ../node_modules/.bin/mocha *.js
+
       - uses: actions/upload-artifact@v4
         if: always()
         with:
